--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
+    "@types/pg": "^8.15.5",
     "date-fns": "^4.1.0",
     "nanoid": "^5.1.5",
     "next": "15.4.6",
+    "pg": "^8.16.3",
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
